--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron center">
     <h1>Welcome to myRecipes App</h1>
     
-    <h2>
+    <h2 class="jumbotext">
         This is the home page for the ruby on rails app
     </h2>
     
