Added editing abilities

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,3 +74,19 @@ h2{
     border-top: 1px solid #ddd;
     color: #777;
 }
+
+.avimg
+{
+    border-radius: 20px;
+   margin: 10px;
+}
+.imgspace{
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 5px;
+    text-align: center;
+}
+
+small{
+    font-size: 11px;
+}
