--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,15 @@
 <header class="navbar navbar-fixed-top navbar-default">
     <div class="container">
-      <%= link_to "myRecipes", "#", class: "btn btn-lg btn-success", id: "logo" %>
+      <%= link_to "myRecipes Home", root_path, class: "btn btn-lg btn-success", id: "logo" %>
       <div class="nav-item">
-        <%= link_to "Link 1", "#", class: "topmen btn btn-warning" %>
+        <%= link_to "Link 1", recipes_path, class: "topmen btn btn-warning" %>
       </div>
-      <div class="nav-item">
+        <div class="nav-item">
         <%= link_to "Link 2", "#", class: "topmen btn btn-warning" %>
       </div>
       <div class="nav-item">
-        <%= link_to "Link 3", "#", class: "topmen btn btn-warning" %>
+        <%= link_to "Add a New Recipe", new_recipe_path, class: "topmen btn btn-warning" %>
       </div>
+    
     </div>
 </header>
