--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
   <%= render 'layouts/navbar' %>
+  <%= render 'layouts/messages' %>
   <div class="container">
     <%= yield %>
     <%= render 'layouts/footer' %>
