--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
             View Recipes as Guest User
         </h3>
         <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-        <p> <%= link_to "Browse Recipe Listings", "#", class: "btn btn-warning btn-small" %> </p>
+        <p> <%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %> </p>
     </div>
     
     <div class="col-lg-4">
@@ -23,7 +23,7 @@
             View Recipes as Guest User
         </h3>
         <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-        <p> <%= link_to "Browse Recipe Listings", "#", class: "btn btn-warning btn-small" %> </p>
+        <p> <%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %> </p>
     </div>
     
     <div class="col-lg-4">
@@ -31,6 +31,6 @@
             View Recipes as Guest User
         </h3>
         <h2 class="left">Browse and view recipes as a guest and Sign up later</h2>
-        <p> <%= link_to "Browse Recipe Listings", "#", class: "btn btn-warning btn-small" %> </p>
+        <p> <%= link_to "Browse Recipe Listings", recipes_path, class: "btn btn-warning btn-small" %> </p>
     </div>
 </div>
