--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -80,6 +80,7 @@ h2{
     border-radius: 20px;
    margin: 10px;
 }
+
 .imgspace{
     margin-left: 10px;
     margin-right: 10px;
@@ -89,4 +90,8 @@ h2{
 
 small{
     font-size: 11px;
+}
+
+.well{
+    background: rgba(126, 171, 103,.15);
 }
