--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,19 @@
 <h1>View All Recipes</h1><hr/>
-
 <% @recipes.each do |r| %>
 <div class="row">
-    
     <div class = "col-md-2 imgspace">
         <%= get_gravimage r.chef, size:100  %>
         <br/>
        <small> Posted by:
         <%= r.chef.chefname %> </small>
     </div>
-        <div class = "col-md-9 well">
-           <h3><%= link_to r.name, r %> </h3>
+        <div class = "col-md-6 well">
+           <h3 style='margin-top: -5px'><%= link_to r.name, r %> </h3><br>
             <p> <%= r.summary %></p>
-            <small>Posted <%= time_ago_in_words(r.created_at) %> ago.</small>
+            <small>Posted <%= time_ago_in_words(r.created_at) %> ago.</small><br>&nbsp;
+        </div>
+        <div class = "col-md-3">
+            <%= image_tag(r.picture.url, size: "250x150", class: "imgspace img-thumbnail") if r.picture? %>
         </div>
     </div>
     <HR/>
