Configured cloud aws storage

--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -1,3 +1,12 @@
+<ul class="nav nav-tabs">
+    <li>
+        <%= link_to "Recipes", recipes_path %>
+    </li>
+    <li class="active">
+        <%= link_to "Chefs", chefs_path %>
+    </li>
+</ul>
+
 <div class = "row">
     <div class="col-md-3">
         <div class="pull-right">
@@ -22,11 +31,7 @@
    
 </div>
  <% end %>
-  <div class = "row">
-    <div class="col-md-3">
-        <div class="pull-right">
-            <%= will_paginate %>    
-        </div>
-    </div>
+  <div>
+    <%= will_paginate %>    
 </div>
 
