--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,6 +59,10 @@ h2{
     color: #777;
    
 }
+h4{
+    font-size: 2.5em;
+    letter-spacing: -2px;
+}
  .jumbotext{
         color: darken($light-orange,20%);
     }
