--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -14,6 +14,24 @@
                <div class = "col-md-9 well">
                     <h3 style='margin-top: -5px'><%= link_to r.name, r %> </h3><br>
                      <p> <%= r.summary %></p>
+                     <!-- Style and Ingredients -->
+                    <% if r.styles.any? %>
+                        <p> Styles: <% r.styles.each do |style| %>
+                            | <%= link_to style.name, style %>
+                        <% end %>
+                        </p>
+                    <% else %>
+                        <p>Styles: | n/a</p>
+                    <% end %>
+                    <% if r.ingredients.any? %>
+                        <p> Ingredietns: <% r.ingredients.each do |ing| %>
+                            | <%= link_to ing.name, ing %> 
+                        <% end %>
+                        </p>
+                    <% else %>
+                        <p>Ingredients: | n/a</p>
+                    <% end %>
+                     
                     <small>Posted <%= time_ago_in_words(r.created_at) %> ago.</small><br>
                     <div class="pull-right">
                         <small><%= r.thumbs_up_total %></small>
