--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -30,17 +30,26 @@
         <div class = "col-md-6 well">
            <h3 style='margin-top: -5px'><%= link_to r.name, r %> </h3><br>
             <p> <%= r.summary %></p>
-           <p> Styles: <% r.styles.each do |style| %>
-                <%= style.name %> | 
+            
+               <% if r.styles.any? %>
+                <p> Styles: <% r.styles.each do |style| %>
+                    | <%= link_to style.name, style %>
+                <% end %>
+                </p>
+            <% else %>
+                <p>Styles: | n/a</p>
             <% end %>
-            </p>
-            <p> Ingredietns: <% r.ingredients.each do |ing| %>
-                <%= ing.name %> | 
+            <% if r.ingredients.any? %>
+                <p> Ingredietns: <% r.ingredients.each do |ing| %>
+                    | <%= link_to ing.name, ing %> 
+                <% end %>
+                </p>
+            <% else %>
+                <p>Ingredients: | n/a</p>
             <% end %>
-            </p>
+        
             
             <small>Posted <%= time_ago_in_words(r.created_at) %> ago.</small>
-            <br>
             
              <div class="pull-right">
                 <small><%= r.thumbs_up_total %></small>
