--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -4,7 +4,7 @@
             <div class="form-group">
                  Name: <%= f.text_field :name, class:"form-control" %><br />
             </div>
-              <%= f.submit "Add New Ingredient", class:"btn btn-primary" %>
+              <%= f.submit "Add New Ingredient", class:"btn btn-warning" %>
               <%= link_to "Cancel", :back, class:"btn btn-danger" %>
         <% end %>
     </div>
