fixed bg image on home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -113,7 +113,7 @@ td.comment{
 }
 
 .jumbotron {
-    background: url("food.jpg");
+    background-image: image-url("food.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
     
