--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -40,16 +40,26 @@
                     <% end %>
                      
                     <small>Posted <%= time_ago_in_words(r.created_at) %> ago.</small><br>
-                    <div class="pull-right">
-                        <small><%= r.thumbs_up_total %></small>
-                        <%= link_to like_recipe_path(r, like: true), method: :post do %>
-                            <span class="glyphicon glyphicon-thumbs-up"></span> <small>Like</small>
-                        <% end %> | 
-                        <small><%= r.thumbs_down_total %></small>
-                        <%= link_to like_recipe_path(r, like: false), method: :post do %>            
-                            <span class="glyphicon glyphicon-thumbs-down"></span> <small>Dislike</small> 
-                        <% end %>
-                    </div>
+                         <div class="pull-right">
+                <% if logged_in? %>
+                    <% if r.chef_likes(current_user).size==1 %>
+                    <% cheflike = r.chef_likes(current_user).first %>
+                        <small>You have <b><%= (cheflike.like == true ? "liked" : "disliked") %></b> this recipe. 
+                        [<%= link_to changevote_recipe_path(r), method: :patch do %> Change your vote <% end %>]</small><br>
+                    <% else %>
+                        <small>You have not yet voted for this recipe</small><br>
+                    <% end %>
+                
+                <% end %>
+                <small><%= r.thumbs_up_total %></small>
+                <%= link_to like_recipe_path(r, like: true), method: :post do %>
+                    <span class="glyphicon glyphicon-thumbs-up"></span> <small>Like</small>
+                <% end %> | 
+                <small><%= r.thumbs_down_total %></small>
+                 <%= link_to like_recipe_path(r, like: false), method: :post do %>            
+                <span class="glyphicon glyphicon-thumbs-down"></span> <small>Dislike</small> 
+                <% end %>
+            </div>
                 </div>
                     
                 <div class = "col-md-3">
