--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -7,17 +7,15 @@
     </li>
 </ul>
 
-
-<div class = "row">
-    <div class="col-md-3">
-        <div class="pull-right">
-            <%= will_paginate %>    
-        </div>
-    </div>
-    <div class="col-md-6">
-        <h1>View All Recipes</h1><hr/>        
-    </div>
-</div>
+<table width=100%>
+    <tr>
+        <td width=60%>
+             <h1 style="text-align: right;">View All Recipes</h1>
+        </td>
+        <td> <span class="pull-right"><%= will_paginate %></span> </td>
+    </tr>
+</table><hr/>
+    
 
 <% @recipes.each do |r| %>
 <div class="row">
