Big signup button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,8 @@
     <div class="jumbotext">
     <h1>Welcome to myRecipes App</h1>
      <p>A place to share your favourite recipes</p><br/>
-    <%= link_to "Sign up now", register_path, class: "btn btn-large btn-primary" %>
+    <%= link_to "Sign up now", register_path, class: "btn btn-lg btn-primary" %>
+    <br/>&nbsp;
     </div>
 </div>
 
